[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/Intro.gd" type="Script" id=1]
[ext_resource path="res://assets/entity/onvi2.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Ufo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.0
margin_top = -566.0
margin_right = 1189.0
margin_bottom = 234.0
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 715, 499 )
scale = Vector2( 6.53125, 5.85938 )
texture = ExtResource( 3 )

[node name="TimerEntryLogo" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerEntryUfo" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TimerOutLogo" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerOutUfo" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="TimerEntryLogo" to="." method="_on_TimerEntryLogo_timeout"]
[connection signal="timeout" from="TimerEntryUfo" to="." method="_on_TimerEntryUfo_timeout"]
[connection signal="timeout" from="TimerOutLogo" to="." method="_on_TimerOutLogo_timeout"]
[connection signal="timeout" from="TimerOutUfo" to="." method="_on_TimerOutUfo_timeout"]
